fix: hamburger bug

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="container mx-auto flex justify-between py-4 items-center">
     <h1 class="font-bold">HoomBooking</h1>
     <div class="w-8 rotate-180 cursor-pointer" (click)="openNav()">
-        <div class="border-2 w-2/4 border-black"></div>
-        <div class="border-2 w-3/4 border-black my-1"></div>
-        <div class="border-2 w-full border-black"></div>
+        <div class="border-2 w-2/4 border-black bg-black"></div>
+        <div class="border-2 w-3/4 border-black my-1 bg-black"></div>
+        <div class="border-2 w-full border-black bg-black"></div>
     </div>
 </div>
 <div class="{{status}} fixed w-screen h-screen bg-black top-0 left-0 px-8">
