add: close when link clicked

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,27 +16,27 @@
     </div>
     <div class="flex justify-center">
         <ul class="text-center pt-10">
-            <li class="py-4 text-white">
+            <li class="py-4 text-white" (click)="closeNav()">
                 <a routerLink="#">
                     Home
                 </a>
             </li>
-            <li class="py-4 text-white">
+            <li class="py-4 text-white" (click)="closeNav()">
                 <a routerLink="#">
                     About US
                 </a>
             </li>
-            <li class="py-4 text-white">
+            <li class="py-4 text-white" (click)="closeNav()">
                 <a routerLink="#">
                     Recommendation
                 </a>
             </li>
-            <li class="py-4 text-white">
+            <li class="py-4 text-white" (click)="closeNav()">
                 <a routerLink="#">
                     Clients
                 </a>
             </li>
-            <li class="py-4 text-white">
+            <li class="py-4 text-white" (click)="closeNav()">
                 <a routerLink="#">
                     Contact US
                 </a>
