--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,46 +1,77 @@
-<div class="container mx-auto flex justify-between py-4 items-center">
-    <h1 class="font-bold">HoomBooking</h1>
-    <div class="w-8 rotate-180 cursor-pointer" (click)="openNav()">
-        <div class="border-2 w-2/4 border-black bg-black"></div>
-        <div class="border-2 w-3/4 border-black my-1 bg-black"></div>
-        <div class="border-2 w-full border-black bg-black"></div>
-    </div>
-</div>
-<div class="{{status}} fixed w-screen h-screen bg-black top-0 left-0 px-8">
-    <div class="flex justify-between items-center w-full py-4">
-        <h1 class="font-bold text-white">HoomBooking</h1>
-        <div class="w-8 relative cursor-pointer" (click)="closeNav()">
-            <div class="border-2 w-3/4 border-white absolute top-0 right-0 bottom-0 rotate-45 bg-white"></div>
-            <div class="border-2 w-3/4 border-white absolute top-0 right-0 bottom-0 -rotate-45 bg-white"></div>
+<div class="w-full bg-white fixed top-0">
+    <div class="container mx-auto flex justify-between py-4 items-center px-8">
+        <h1 class="font-bold md:text-2xl lg:text-3xl text-black">HoomBooking</h1>
+        <div class="w-8 rotate-180 cursor-pointer lg:hidden" (click)="openNav()">
+            <div class="border-2 md:border-[3px] w-2/4 border-black bg-black"></div>
+            <div class="border-2 md:border-[3px] w-3/4 border-black my-1 bg-black md:my-[6px]"></div>
+            <div class="border-2 md:border-[3px] w-full border-black bg-black"></div>
+        </div>
+        <div class="hidden lg:flex">
+            <ul class="flex justify-end gap-12 items-center">
+                <li>
+                    <a routerLink="#" class="text-base text-black">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="#" class="text-base text-black">
+                        About US
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="#" class="text-base text-black">
+                        Recommendation
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="#" class="text-base text-black">
+                        Clients
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="#" class="text-base text-black">
+                        Contact US
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="flex justify-center">
-        <ul class="text-center pt-10">
-            <li class="py-4 text-white" (click)="closeNav()">
-                <a routerLink="#">
-                    Home
-                </a>
-            </li>
-            <li class="py-4 text-white" (click)="closeNav()">
-                <a routerLink="#">
-                    About US
-                </a>
-            </li>
-            <li class="py-4 text-white" (click)="closeNav()">
-                <a routerLink="#">
-                    Recommendation
-                </a>
-            </li>
-            <li class="py-4 text-white" (click)="closeNav()">
-                <a routerLink="#">
-                    Clients
-                </a>
-            </li>
-            <li class="py-4 text-white" (click)="closeNav()">
-                <a routerLink="#">
-                    Contact US
-                </a>
-            </li>
-        </ul>
+    <div class="{{status}} fixed w-screen h-screen bg-black top-0 left-0 px-8">
+        <div class="flex justify-between items-center w-full py-4">
+            <h1 class="font-bold text-white">HoomBooking</h1>
+            <div class="w-8 relative cursor-pointer" (click)="closeNav()">
+                <div class="border-2 w-3/4 border-white absolute top-0 right-0 bottom-0 rotate-45 bg-white"></div>
+                <div class="border-2 w-3/4 border-white absolute top-0 right-0 bottom-0 -rotate-45 bg-white"></div>
+            </div>
+        </div>
+        <div class="flex justify-center">
+            <ul class="text-center pt-10">
+                <li class="py-4 text-white" (click)="closeNav()">
+                    <a routerLink="#">
+                        Home
+                    </a>
+                </li>
+                <li class="py-4 text-white" (click)="closeNav()">
+                    <a routerLink="#">
+                        About US
+                    </a>
+                </li>
+                <li class="py-4 text-white" (click)="closeNav()">
+                    <a routerLink="#">
+                        Recommendation
+                    </a>
+                </li>
+                <li class="py-4 text-white" (click)="closeNav()">
+                    <a routerLink="#">
+                        Clients
+                    </a>
+                </li>
+                <li class="py-4 text-white" (click)="closeNav()">
+                    <a routerLink="#">
+                        Contact US
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
