--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="w-full pt-28 lg:pt-0 lg:h-screen flex lg:flex-row flex-col-reverse justify-center items-center px-8 gap-5">
     <div class="lg:w-2/4 w-full pr-0 lg:pr-10">
-        <h1 class="capitalize text-2xl xl:text-4xl font-bold lg:tracking-wider text-center lg:text-start">find a new house, rent a house, and sell your house only from this website</h1>
-        <p class="xl:text-base tracking-wider pt-5 xl:text-start text-center text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit.</p>
+        <h1 class="capitalize text-2xl xl:text-4xl font-bold lg:tracking-wider text-center lg:text-start text-black">find a new house, rent a house, and sell your house only from this website</h1>
+        <p class="xl:text-base tracking-wider pt-5 xl:text-start text-center text-sm text-black/50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit.</p>
     </div>
     <div class="lg:w-2/4 w-full">
         <img src="../../../assets/20945149.jpg" />
