--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,11 +1,11 @@
-<div class="w-full h-auto xl:h-screen px-8 flex justify-between gap-7 items-center">
-    <div class="w-2/4">
+<div class="w-full h-auto xl:h-screen px-8 block py-14 xl:flex justify-between gap-7 items-center xl:pt-0">
+    <div class="xl:w-2/4 w-full">
         <img src="../../../assets/3758757.jpg" />
     </div>  
-    <div class="w-2/4">
-        <p class="text-base text-black">About US</p>
-        <h1 class="text-2xl tracking-wider pt-6 font-bold text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit</h1>
-        <p class="py-5  text-black/50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo. Mauris elementum velit vel semper pellentesque. Vestibulum volutpat faucibus lobortis.</p>
-        <p class="text-black/50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo</p>
+    <div class="xl:w-2/4 w-full">
+        <p class="text-sm text-center xl:text-start xl:text-base text-black pt-6 xl:pt-0">About US</p>
+        <h1 class="xl:text-2xl pt-6 font-bold text-black text-base text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit</h1>
+        <p class="pb-5 pt-10  text-black/50 text-sm xl:text-base">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo. Mauris elementum velit vel semper pellentesque. Vestibulum volutpat faucibus lobortis.</p>
+        <p class="text-black/50 text-sm xl:text-base">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo</p>
     </div>
 </div>
