--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-screen xl:h-screen block py-14 xl:flex justify-between gap-7 items-center">
+<div class="w-full h-screen xl:h-screen block xl:flex justify-between gap-7 items-center">
     <div class="xl:w-2/4 w-full">
         <img src="../../../assets/3758757.jpg" />
     </div>  
