fix: high responsive mobile

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,10 +1,10 @@
-<div class="w-full h-auto xl:h-screen block xl:flex justify-between gap-7 items-center px-8 py-14">
+<div class="container mx-auto h-auto xl:h-screen block xl:flex justify-between gap-7 items-center px-8 py-14">
     <div class="xl:w-2/4 w-full">
         <img src="../../../assets/3758757.jpg" />
     </div>  
     <div class="xl:w-2/4 w-full">
         <p class="text-sm text-center xl:text-start xl:text-base text-black pt-6 xl:pt-0">About US</p>
-        <h1 class="xl:text-2xl pt-6 font-bold text-black text-base text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit</h1>
+        <h1 class="xl:text-2xl pt-6 font-bold text-black text-base text-center xl:text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit</h1>
         <p class="pb-5 pt-10  text-black/50 text-sm xl:text-base text-center xl:text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo. Mauris elementum velit vel semper pellentesque. Vestibulum volutpat faucibus lobortis.</p>
         <p class="text-black/50 text-sm xl:text-base text-center xl:text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec nulla commodo, dictum sem sit amet, sollicitudin velit. Mauris accumsan scelerisque lorem, a porttitor elit. Nunc nisi magna, vehicula non imperdiet quis, accumsan quis leo</p>
     </div>
