fix: size brand name

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="w-full bg-white fixed top-0">
     <div class="container mx-auto flex justify-between py-4 items-center px-8">
-        <h1 class="font-bold md:text-2xl lg:text-3xl text-black">HoomBooking</h1>
+        <h1 class="text-xl font-bold md:text-2xl lg:text-3xl text-black">HoomBooking</h1>
         <div class="w-8 rotate-180 cursor-pointer lg:hidden" (click)="openNav()">
             <div class="border-2 md:border-[3px] w-2/4 border-black bg-black"></div>
             <div class="border-2 md:border-[3px] w-3/4 border-black my-1 bg-black md:my-[6px]"></div>
