--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto h-auto xl:h-screen block xl:flex justify-between gap-7 items-center px-8 py-14">
+<div class="container mx-auto h-auto xl:h-screen block xl:flex justify-between gap-7 items-center px-8 py-14" id="about">
     <div class="xl:w-2/4 w-full">
         <img src="../../../assets/3758757.jpg" />
     </div>  
