--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -2,4 +2,5 @@
     <app-header></app-header>
     <app-hero></app-hero>
     <app-about></app-about>
+    <app-recommendation></app-recommendation>
 </div>
