--- a/src/app/components/for-sale/for-sale.component.html
+++ b/src/app/components/for-sale/for-sale.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto xl:grid grid-cols-4 xl:gap-4">
+<div class="container mx-auto xl:grid grid-cols-4 xl:ng gap-4">
     <div class="w-full bg-white rounded-lg my-6 xl:my-0" *ngFor="let data of size">
         <img src="../../../assets/Rectangle 166.png" class="w-full rounded-t-lg" />
         <div class="p-4">
